# meta-haskell

./: .gitignore  README.markdown  meta-haskell.cabal
scripts/: pre-commit.sh
src/: Main.hs  Parser.hs
