Name:           Meta-Haskell
Version:        0.2
Synopsis:    Parser to embed Haskell in text files
License:        BSD3
Author:         Ben Foppa
Maintainer:     benjamin.foppa@gmail.com
Build-Type:     Simple
Cabal-Version:  >= 1.9.2

Executable meta
    hs-source-dirs:    src/
    Main-is:           Main.hs
    GHC-Options:       -Wall -Werror -threaded -rtsopts=all -fllvm

    Build-Depends: 
                    parsec,
                    process == 1.2.*,
                    base
